Fixed rendering comic covers [#935]
 * Changed the layout to adjust to the screen width.
 * Added a single css style to avoid overlapping the footer.

--- a/comixed-webui/src/styles.scss
+++ b/comixed-webui/src/styles.scss
@@ -152,12 +152,8 @@ $cx-selected-comic-color: #ffffff;
   margin-right: 50px !important;
 }
 
-.cx-margin-bottom-50px {
-  margin-bottom: 50px !important;
-}
-
-.cx-margin-bottom-100px {
-  margin-bottom: 100px !important;
+.cx-footer-margin {
+  margin-bottom: 75px !important;
 }
 
 .cx-margin-2 {
